Tried react DOM, will learn more soon

--- a/pathfinding-visualizer/src/Pathfinding Visualizer/Node/Node.css
+++ b/pathfinding-visualizer/src/Pathfinding Visualizer/Node/Node.css
@@ -8,7 +8,9 @@
 .node-visited {
     background-color: blueviolet;
 }
-
+.node-shortest-path{
+    background-color: yellow;
+}
 .node-wall{
     background-color: gray;
 }
