--- a/pathfinding-visualizer/src/Pathfinding Visualizer/Node/Node.css
+++ b/pathfinding-visualizer/src/Pathfinding Visualizer/Node/Node.css
@@ -1,16 +1,15 @@
 .node{
     background-color: white;
+    pointer-events: fill;
 }
 .node:hover{
     background-color: black;
 }
-  
+
 .node-visited {
     background-color: blueviolet;
 }
-.node-shortest-path{
-    background-color: yellow;
-}
+
 .node-wall{
     background-color: gray;
 }
@@ -21,4 +20,11 @@
 
 .node-finish{
     background-color: blue;
+}
+.node-shortest-path{
+    background-color: yellow;
+}
+
+.node-test{
+    background-color: pink;
 }
