--- a/pathfinding-visualizer/src/Pathfinding Visualizer/Node/Node.css
+++ b/pathfinding-visualizer/src/Pathfinding Visualizer/Node/Node.css
@@ -19,17 +19,17 @@
 @keyframes visitedAnimation {
   0% {
     transform: scale(.3);
-    background-color: blueviolet;
+    background-color: red;
   }
 
   50% {
     transform: scale(1.2);
-    background-color: blueviolet;
+    background-color: blue;
   }
 
   100% {
     transform: scale(1.0);
-    background-color: blueviolet;
+    background-color: turquoise;
   }
 }
 
@@ -106,17 +106,17 @@
 @keyframes startAnimation {
   0% {
     transform: scale(.3);
-    background-color: green;
+    background-color: blueviolet;
   }
 
   50% {
     transform: scale(1.2);
-    background-color: green;
+    background-color: blueviolet;
   }
 
   100% {
     transform: scale(1.0);
-    background-color: green;
+    background-color: blueviolet;
   }
 }
 
