--- a/pathfinding-visualizer/src/Pathfinding Visualizer/pathfinding Visualizer.css
+++ b/pathfinding-visualizer/src/Pathfinding Visualizer/pathfinding Visualizer.css
@@ -6,7 +6,6 @@
   -webkit-user-select: none;
   -ms-user-select: none; /* From IE10 only */
   user-select: none; /* Not valid CSS yet, as of July 2012 */
-
   -webkit-user-drag: none; /* Prevents dragging of images/divs etc */
 }
 .main-body {
@@ -110,4 +109,19 @@ button:active {
 }
 .button-erase-on {
   background-color: purple;
+}
+footer{
+  display: grid;
+  grid-template-columns: 3fr 1fr 1fr 3fr;
+  grid-template-rows: 100%;
+  grid-template-areas: ". git li .";
+}
+.social-links{
+  font-size: 3.5vh;
+}
+.github{
+  grid-area: git;
+}
+.linkedin{
+  grid-area: li;
 }
